added middle content and contact div

--- a/index.html
+++ b/index.html
@@ -4,52 +4,46 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Van Tran | A Web Developer</title>
-    <link rel="stylesheet" href="css/styles.css" />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="favicons/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="favicons/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="favicons/favicon-16x16.png"
-    />
+    <link rel="stylesheet" href="css/index.css" />
+    <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png"/>
+    <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png"/>
     <link rel="manifest" href="favicons/site.webmanifest" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Poiret+One&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Poiret+One&display=swap" rel="stylesheet" />
   </head>
+
   <body>
     <div class="top-container">
       <img class="subway" src="images/nysubway3.png" alt="subway" />
       <div class="name">I'm Van</div>
       <div class="who">A Web Developer</div>
       <div class="background-wrap">
-        <div class="x1">
-          <div class="cloud"></div>
-        </div>
-        <div class="x2">
-          <div class="cloud"></div>
-        </div>
-        <div class="x3">
-          <div class="cloud"></div>
-        </div>
-        <div class="x4">
-          <div class="cloud"></div>
-        </div>
-        <div class="x5">
-          <div class="cloud"></div>
-        </div>
+        <div class="x1"> <div class="cloud"></div></div>
+        <div class="x2"> <div class="cloud"></div></div>
+        <div class="x3"> <div class="cloud"></div></div>
+        <div class="x4"> <div class="cloud"></div></div>
+        <div class="x5"> <div class="cloud"></div></div>
       </div>
     </div>
+
+    <div class="middle-container">
+        <div class="about-row">
+        <img class="california" src="images/california.jpg" alt="california-illustration"/>
+        <div class="divider"></div>
+        <div class="about-title">about.</div>
+        <div class="about-description">
+          From OC California, fashion designer turn web designer with a passion
+          for clean, beautiful UX/UI and prototyping using the up-to-date
+          technology tools.
+        </div>
+        </div>
+    </div>
+
+    <div class="contact-container section-divider">
+        <div class="contact">hello</div>
+        <div class="divider-2"></div>
+    </div>
+
+
   </body>
 </html>
