added fixed navbar

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Van Tran | A Web Developer</title>
+    <title>Van Tran | A Web Designer</title>
     <link rel="stylesheet" href="css/index.css" />
     <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png"/>
     <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png"/>
@@ -13,10 +13,21 @@
   </head>
 
   <body>
+    <header class="header">
+        <a href="default.asp"> <img class="logo" src="images/VANFACE.png" alt="logo"></a>
+        <input class="menu-btn" type="checkbox" id="menu-btn" />
+        <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+        <ul class="menu">
+          <li><a href="#about">ABOUT</a></li>
+          <li><a href="#work">WORK</a></li>
+          <li><a href="#contact">CONTACT</a></li>
+        </ul>
+      </header>
+
     <div class="top-container">
       <img class="subway" src="images/nysubway3.png" alt="subway" />
       <div class="name">I'm Van</div>
-      <div class="who">A Web Developer</div>
+      <div class="who">A Web Designer</div>
       <div class="background-wrap">
         <div class="x1"> <div class="cloud"></div></div>
         <div class="x2"> <div class="cloud"></div></div>
