updated landing page

--- a/index.html
+++ b/index.html
@@ -37,20 +37,13 @@
       </div>
     </div>
 
+    <div id="about">
     <div class="middle-container">
-        <div class="about-row">
-        <img class="california" src="images/california.jpg" alt="california-illustration"/>
-        <div class="divider"></div>
-        <div class="about-title">about.</div>
-        <div class="about-description">
-          From OC California, fashion designer turn web designer with a passion
-          for clean, beautiful UX/UI and prototyping using the up-to-date
-          technology tools.
-        </div>
-        </div>
+      <img class="beach" src="images/beach.png" alt="beach" />
     </div>
+  </div>
 
-    <div class="contact-container section-divider">
+    <div class="contact-container">
         <div class="contact">hello</div>
         <div class="divider-2"></div>
     </div>
