updated css about

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
     </div>
 
     <div id="about">
-    <div class="middle-container">
+      <div class="middle-container">
       <img class="beach" src="images/beach.png" alt="beach" />
+      </div>
     </div>
-  </div>
 
-    <div class="contact-container">
-        <div class="contact">hello</div>
+    <div id="contact">
+        <div class="contact-container">hello</div>
         <div class="divider-2"></div>
     </div>
 
