--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <div id="contact">
         <div class="contact-container">hello</div>
         <div class="divider-2"></div>
+        <div class="divider-2"></div>
     </div>
 
 
