landing page finished

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
 
     <div id="contact">
       <div class="contact-wrapper">
+        <div class="resume">
+          <a href="images/Van-Tran-Resume.pdf">Resume/CV</a>
+        </div>
         <img class="window" src="images/window.png" alt="window" />
         <div class="contact-container">
         <form class="form-horizontal" role="form" action="https://formspree.io/xpzyajlr" method="POST">
@@ -54,7 +57,6 @@
           <button class="send-button" id="submit" type="submit" value="SEND">
           <div class="button"> <i class="fa fa-paper-plane"></i><span class="send-text">SEND</span></div></button>
         </form>
-        <div class="resume"><a href="images/Van-Tran-Resume.pdf">RESUME</a></div>
         </div>
 
     <div class="dolls-container">
