--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <body>
     <header class="header">
-      <a href="default.asp"> <img class="logo" src="images/VANFACE.png" alt="logo"/></a>
+      <a href="https://minivantran.dev"> <img class="logo" src="images/VANFACE.png" alt="logo"/></a>
       <input class="menu-btn" type="checkbox" id="menu-btn" />
       <label class="menu-icon" for="menu-btn" ><span class="navicon"></span></label>
       <ul class="menu">
